# testing_lambda

./: LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  app.py  pyproject.toml
