[tool.poetry]
name = "src"
version = "0.1.0"
description = "Payroll-backend"
authors = ["lucrohatsch <lucas.rohatsch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
python-dotenv = "^0.20.0"
pytest = "^7.1.2"
pylint = "^2.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

